# yom-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  demo.py  greet.py  hello_world.py  json_parser.py  pyproject.toml  test_json_parser.py  test_user_processor.py  user_processor.py
.github/workflows/: ci.yml  release.yml
.yom/agents/: coder.md  reviewer.md
.yom/skills/coding/: SKILL.md
docs/: README.md  architecture.md  plugins.md  quickstart.md  skills.md  subagents.md
docs/examples/.yom/agents/: coder.md  reviewer.md
docs/examples/skills/coding/: SKILL.md
examples/: README.md  customer_support.py  demo_new_features.py  event_hooks_demo.py  multi_agent_demo.py  pydantic_validation.py
examples/agents/: python-expert.md  researcher.md
examples/colab/: yom_advanced.ipynb  yom_beginner.ipynb  yom_intermediate.ipynb
examples/cookbook/: README.md
examples/production/: README.md  code_review_pipeline.py  customer_support.py
examples/telegram/: README.md  multi_session_bot.py  telegram_bot.py
plugins_example/: example_plugin.py
tests/: conftest.py  test_context.py  test_hooks.py  test_loop.py  test_new_features.py  test_parallel_subagents.py  test_providers.py  test_session.py  test_tools.py
yom/: __init__.py  __main__.py  agent.py  agent_runtime.py  cancellation.py  chat.py  cli.py  config.py  debug.py  deps.py  events.py  extensions.py  factories.py  fastapi.py  hooks.py  logging_config.py  loop.py  loop.py.bak  main.py  plugins.py  rpc.py  testing.py
yom/context/: __init__.py  manager.py  tokenizer.py
yom/hooks/: __init__.py  hooks.py
yom/models/: __init__.py  message_parts.py  messages.py  output.py  responses.py  state.py
yom/providers/: __init__.py  anthropic.py  base.py  factory.py  google.py  local.py  nvidia.py  openai.py  validation.py
yom/runtime/: __init__.py  config.py  deps.py  extensions.py  factories.py  integration.py  runtime.py
yom/session/: __init__.py  backends.py
yom/skills/: __init__.py  core.py
yom/subagent/: __init__.py  core.py  tool.py
yom/tools/: __init__.py  adapter.py  core.py  decorator.py  define.py  discover.py  protocol.py  pydantic_tools.py  registry.py  result.py
yom/toolsets/: __init__.py  database.py  github.py  http.py  shell.py  storage.py  telegram.py
